build login success

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=localhost
 DB_PORT=27017
-DB_NAME=chat-app
 
-CONNECTION_HOST=
-CONNECTON_PORT=
+CONNECTION_HOST=localhost
+CONNECTION_PORT=3000
 
-SECRET=
+SECRET_KEY=]J>_n^BS~7mGvN?jhj4`lf~/xp0Inn*?.5oFU%wN&"A4fHi!9cidCFK[E>e2;/YnV5niVG;&~.+t_}<MBkcS9B%f=;3nnPrm@4Yn"bX-=n9jeudIQRZvYh%m!MzU-ehQFMlo=:SfzJqANLsxd\&Z^:(njZeF.v;N|pZq*N<BdDhX;idV:ZSmIUJ/1Dm#~<'f[IaHz0JP{C7N&-3"Rxtp8Rk>IGO'l+|<T0,z(%~YU`&"jL]fzI,+[&^otzT}+DID
+
